conformance/manifests/tests/mesh/httproute-303-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-307-redirect
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: echo
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /temporary
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 307
